# dba-mariadb

./: README.md  create_user.sql  log_table.sql  nba_tables.sql  pyproject.toml  test.py
src/dba_mariadb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dbamdb/: conn.py  insert.py
